crates/ruff_python_parser/src/snapshots/ruff_python_parser__context__tests__ann_assign_name.snap
---
source: ruff_python_parser/src/context.rs
expression: parse_ast
---
[
    AnnAssign(
        StmtAnnAssign {
            range: 0..10,
            target: Name(
                ExprName {
                    range: 0..1,
                    id: "x",
                    ctx: Store,
                },
            ),
            annotation: Name(
                ExprName {
                    range: 3..6,
                    id: "int",
                    ctx: Load,
                },
            ),
            value: Some(
                Constant(
                    ExprConstant {
                        range: 9..10,
                        value: Int(
                            1,
                        ),
                        kind: None,
                    },
                ),
            ),
            simple: true,
        },
    ),
]
