crates/ruff_python_parser/src/snapshots/ruff_python_parser__context__tests__assign_name.snap
---
source: crates/ruff_python_parser/src/context.rs
expression: parse_ast
---
[
    Assign(
        StmtAssign {
            range: 0..13,
            targets: [
                Name(
                    ExprName {
                        range: 0..1,
                        id: "x",
                        ctx: Store,
                    },
                ),
            ],
            value: Tuple(
                ExprTuple {
                    range: 4..13,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 5..6,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 8..9,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 11..12,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                    is_parenthesized: true,
                },
            ),
        },
    ),
]
