crates/ruff_python_parser/src/snapshots/ruff_python_parser__context__tests__assign_named_expr.snap
---
source: ruff_python_parser/src/context.rs
expression: parse_ast
---
[
    If(
        StmtIf {
            range: 0..14,
            test: NamedExpr(
                ExprNamedExpr {
                    range: 3..8,
                    target: Name(
                        ExprName {
                            range: 3..4,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                    value: Constant(
                        ExprConstant {
                            range: 7..8,
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    ),
                },
            ),
            body: [
                Pass(
                    StmtPass {
                        range: 10..14,
                    },
                ),
            ],
            elif_else_clauses: [],
        },
    ),
]
