crates/ruff_python_parser/src/snapshots/ruff_python_parser__context__tests__assign_starred.snap
---
source: crates/ruff_python_parser/src/context.rs
expression: parse_ast
---
[
    Assign(
        StmtAssign {
            range: 0..19,
            targets: [
                Tuple(
                    ExprTuple {
                        range: 0..7,
                        elts: [
                            Name(
                                ExprName {
                                    range: 1..2,
                                    id: "x",
                                    ctx: Store,
                                },
                            ),
                            Starred(
                                ExprStarred {
                                    range: 4..6,
                                    value: Name(
                                        ExprName {
                                            range: 5..6,
                                            id: "y",
                                            ctx: Store,
                                        },
                                    ),
                                    ctx: Store,
                                },
                            ),
                        ],
                        ctx: Store,
                        is_parenthesized: true,
                    },
                ),
            ],
            value: Tuple(
                ExprTuple {
                    range: 10..19,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 11..12,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 14..15,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 17..18,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                    is_parenthesized: true,
                },
            ),
        },
    ),
]
