crates/ruff_python_parser/src/snapshots/ruff_python_parser__context__tests__assign_subscript.snap
---
source: crates/ruff_python_parser/src/context.rs
expression: parse_ast
---
[
    Assign(
        StmtAssign {
            range: 0..16,
            targets: [
                Subscript(
                    ExprSubscript {
                        range: 0..4,
                        value: Name(
                            ExprName {
                                range: 0..1,
                                id: "x",
                                ctx: Load,
                            },
                        ),
                        slice: Name(
                            ExprName {
                                range: 2..3,
                                id: "y",
                                ctx: Load,
                            },
                        ),
                        ctx: Store,
                    },
                ),
            ],
            value: Tuple(
                ExprTuple {
                    range: 7..16,
                    elts: [
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 8..9,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 11..12,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 14..15,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ],
                    ctx: Load,
                    is_parenthesized: true,
                },
            ),
        },
    ),
]
